--- a/CamadaEnlace/makefile
+++ b/CamadaEnlace/makefile
@@ -1,10 +1,10 @@
 all: transmissor.o funcoesAuxiliares.o receptor.o
 
 funcoesAuxiliares.o: funcoesAuxiliares.hpp funcoesAuxiliares.cpp
-	g++ -std=c++17 -Wall -c funcoesAuxiliares.cpp
+	g++ -g -std=c++17 -Wall -c funcoesAuxiliares.cpp
 
 transmissor.o: transmissor.hpp transmissor.cpp
-	g++ -std=c++17 -Wall -c transmissor.cpp
+	g++  -g -std=c++17 -Wall -c transmissor.cpp
 
 receptor.o: receptor.cpp receptor.hpp
-	g++ -std=c++17 -Wall -c receptor.cpp
+	g++ -g -std=c++17 -Wall -c receptor.cpp
